--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -6,63 +6,81 @@
   </div>
   <div class="col-3-1 flexible">
     <div class="col-1-3">
-      {{#if unlocked}}
 
-        <!-- Conscience -->
+      <!-- Conscience -->
+      {{#if unlocked}}       
           {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
           {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
+      {{else}}
+          <div class="form-group">
+            <label>{{localize "PENOMBRE.ui.conscienceVal"}}</label>
+            <div class="form-fields">{{system.conscience.valeur}}</div>
+          </div>
+          <div class="form-group">
+            <label>{{localize "PENOMBRE.ui.conscienceMax"}}</label>
+            <div class="form-fields">{{system.conscience.max}}</div>
+          </div>
+      {{/if}}
 
-        <!-- Complications -->
-          {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
-          {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
-          {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
-          {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
+      <!-- Jetons-->
+      <div class="div-jetons">
+          {{#each system.conscience.jetons as |jeton id|}}
+            {{#if (lt id @root.system.conscience.valeur)}}
+              <img class="jeton dropshadow-{{jeton.statut}}" data-action="jeton" data-index="{{@index}}" src="{{getJetonImage jeton.statut}}"></img>
+            {{/if}}
+          {{/each}}
+          {{#times nbJetonsPerdus}}
+            <img class="jeton" src="systems/penombre/assets/ui/cercle.png"></img>
+          {{/times}}
+      </div>
 
-
-          <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
+      <!-- Complications -->
+      <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
+      {{#if unlocked}}                            
           <div class="cadre-complications-2">
-            <label>{{localize "PENOMBRE.ui.complications.decrivezPoints"}}</label>
-            {{#each system.conscience.complications as |complication id|}}
 
-              <div class="form-group">
-                <label>{{localize (concat "PENOMBRE.ui.complications.description." id)}}</label>
-
-                <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-                Intégrer ici une des 4 lignes Complications, au-dessus, au &each : je ne sais pas comment faire
-
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-
-              </div>
               <div class="form-group div-cases">
-                <label>{{localize "PENOMBRE.ui.complications.valeur"}}</label>
+                {{formInput systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
                 <div class="images-cases">
-                  <!-- id : une, deux, trois, quatre ; @index : 1, 2, 3 -->
                   {{#times 3}}
-                    <img class="complication-case" data-action="complication" data-complication="{{id}}" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte complication.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                    <img class="complication-case" data-action="complication" data-complication="une" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte systemSource.conscience.complications.une.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
                   {{/times}}
                 </div>
               </div>
-            {{/each}}
-        </div>
+
+              <div class="form-group div-cases">
+                {{formInput systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
+                <div class="images-cases">
+                  {{#times 3}}
+                    <img class="complication-case" data-action="complication" data-complication="deux" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte systemSource.conscience.complications.deux.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                  {{/times}}
+                </div>
+              </div>
+
+              <div class="form-group div-cases">
+                {{formInput systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
+                <div class="images-cases">
+                  {{#times 3}}
+                    <img class="complication-case" data-action="complication" data-complication="trois" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte systemSource.conscience.complications.trois.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                  {{/times}}
+                </div>
+              </div>
+
+              <div class="form-group div-cases">
+                {{formInput systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
+                <div class="images-cases">
+                  {{#times 3}}
+                    <img class="complication-case" data-action="complication" data-complication="quatre" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte systemSource.conscience.complications.quatre.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                  {{/times}}
+                </div>
+              </div>
+
+            </div>
 
       {{else}}
-        <!-- Conscience -->
-        <div class="form-group">
-          <label>{{localize "PENOMBRE.ui.conscienceVal"}}</label>
-          <div class="form-fields">{{system.conscience.valeur}}</div>
-        </div>
-        <div class="form-group">
-          <label>{{localize "PENOMBRE.ui.conscienceMax"}}</label>
-          <div class="form-fields">{{system.conscience.max}}</div>
-        </div>
 
-        <!-- Complications -->
-
-        <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
         <div class="cadre-complications">
           {{#each system.conscience.complications as |complication id|}}
-            <label>{{localize (concat "PENOMBRE.ui.complications.description." id)}}</label>
             <div class="ligne-complication">
               <div class="form-group div-descriptions">
                 <div class="form-fields">{{complication.description}}</div>
@@ -79,18 +97,6 @@
           {{/each}}
         </div>
       {{/if}}
-
-      <!-- Jetons-->
-        <div class="div-jetons">
-          {{#each system.conscience.jetons as |jeton id|}}
-            {{#if (lt id @root.system.conscience.valeur)}}
-              <img class="jeton dropshadow-{{jeton.statut}}" data-action="jeton" data-index="{{@index}}" src="{{getJetonImage jeton.statut}}"></img>
-            {{/if}}
-          {{/each}}
-          {{#times nbJetonsPerdus}}
-            <img class="jeton" src="systems/penombre/assets/ui/cercle.png"></img>
-          {{/times}}
-        </div>
 
     </div>
   </div>
