Pouvoirs en plus gros

--- a/penombre.css
+++ b/penombre.css
@@ -433,7 +433,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre .frise-pen
   color: #56605b;
   text-align: center;
 }
-.penombre.eminence .eminence-content .eminence-pouvoirs .titre {
+.penombre.eminence .eminence-content .eminence-pouvoirs .titre-section-pouvoirs {
   font-size: 35px;
   float: none;
 }
