--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -542,7 +542,7 @@ body {
         color: @color-secondary;
         text-align: center;
 
-        .titre {
+        .titre-section-pouvoirs {
           font-size: @font-size-2xlarge;
           float: none;
         }
