--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -435,8 +435,12 @@ body {
             }
           }
         }
-      }
 
+        .note-jetons {
+          text-align: center;
+          color: @color-secondary;
+        }
+      }
 
       // Section harmoniques
       .eminence-harmoniques {
