--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -5,7 +5,7 @@
     <img class="" src="/systems/penombre/assets/ui/doree.png" alt="|" />
   </div>
   <div class="col-3-1 flexible">
-    <div class="col-1-3">
+    <div class="col-1-3" data-tooltip="{{localize 'PENOMBRE.ui.clicJetons'}}">
 
       <!-- Conscience -->
       {{#if unlocked}}       
@@ -103,7 +103,9 @@
           {{/each}}
         </div>
       {{/if}}
-
+      <div class="note-jetons">
+        <span>{{localize "PENOMBRE.ui.creerJetons"}}</span>
+      </div>
     </div>
   </div>
 </div>
