--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -111,6 +111,18 @@ body {
           // Section timbre
           .eminence-timbre {
             min-height: 90px;
+            display: table;
+
+            .cadre-img {
+              width: 100px;
+              // height: 100px;
+              float: left;
+            }
+
+            .datas-timbre {
+              float: left;
+              width: 518px;
+            }
 
             .logo-penombre {
               float: none;
@@ -139,8 +151,20 @@ body {
 
           // Section timbre
           .eminence-timbre {
-            min-height: 90px;
+            min-height: 110px;
             background-color: #2d1000;
+
+            .cadre-img {
+              width: 100px;
+              // height: 100px;
+              float: left;
+            }
+
+            .datas-timbre {
+              float: left;
+              width: 518px;
+            }
+
 
             .logo-penombre {
               float: none;
