--- a/templates/eminence/partials/personnage.hbs
+++ b/templates/eminence/partials/personnage.hbs
@@ -11,18 +11,22 @@
       {{formGroup fields.name value=document.name localize=true disabled=locked}}
       {{#if unlocked}}
         {{formGroup systemFields.peuple value=systemSource.peuple localize=true}}
-        {{formGroup systemFields.cle value=systemSource.cle localize=true}}
+          {{#if (or (eq styleJeu "standard") (eq styleJeu "avance"))}}
+          {{formGroup systemFields.cle value=systemSource.cle localize=true}}
+          {{/if}}
       {{else}}
         <div class="form-group">
           <label>{{localize "PENOMBRE.ui.peuple"}}</label>
           <div class="form-fields">{{localize (concat "PENOMBRE.Peuple." system.peuple ".label")}}</div>
         </div>
+        {{#if (or (eq styleJeu "standard") (eq styleJeu "avance"))}}
         <div class="form-group">
           <label>{{localize "PENOMBRE.ui.cle"}}</label>
           <div class="form-fields">{{localize (concat "PENOMBRE.Harmonique." system.cle ".label")}}</div>
         </div>
+        {{/if}}
       {{/if}}
-
+      {{#if (or (eq styleJeu "standard") (eq styleJeu "avance"))}}
       <div class="form-group">
         <label>{{localize "PENOMBRE.ui.gamme"}}</label>
         <div class="form-fields">{{localize (concat "PENOMBRE.Gamme." system.gamme ".label")}}</div>
@@ -31,6 +35,7 @@
         <label>{{localize "PENOMBRE.ui.ton"}}</label>
         <div class="form-fields">{{localize (concat "PENOMBRE.Ton." system.ton ".label")}}</div>
       </div>
+      {{/if}}
     </div>
   </div>
 </div>
