--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -577,6 +577,7 @@ body {
 
         .content {
           .potentiel {
+            text-align: center;
 
             .div-potentiel {
               position: relative;
@@ -604,8 +605,9 @@ body {
               }
 
               .val-potentiel {
-                margin-left: 45px;
+                margin-left: 41.5px;
                 margin-top: 42px;
+                text-align: center;
                 font-size: @font-size-large;
               }
 
@@ -648,6 +650,7 @@ body {
 
         .content {
           .potentiel {
+            text-align: center;
 
             .div-potentiel {
               position: relative;
@@ -675,8 +678,9 @@ body {
               }
 
               .val-potentiel {
-                margin-left: 45px;
+                margin-left: 41.5px;
                 margin-top: 42px;
+                text-align: center;
                 font-size: @font-size-large;
               }
 
@@ -713,6 +717,7 @@ body {
 
         .content {
           .potentiel {
+            text-align: center;
 
             .div-potentiel {
               position: relative;
@@ -740,8 +745,9 @@ body {
               }
 
               .val-potentiel {
-                margin-left: 45px;
+                margin-left: 41.5px;
                 margin-top: 42px;
+                text-align: center;
                 font-size: @font-size-large;
               }
 
