--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -109,7 +109,8 @@ body {
           clear: both;
 
           // Section timbre
-          .eminence-timbre {
+          .eminence-timbre,
+          .eminence-timbre2 {
             min-height: 90px;
             display: table;
 
@@ -122,6 +123,7 @@ body {
             .datas-timbre {
               float: left;
               width: 518px;
+              padding-left: 4px;
             }
 
             .logo-penombre {
@@ -151,7 +153,7 @@ body {
 
           // Section timbre
           .eminence-timbre {
-            min-height: 110px;
+            min-height: 90px;
             background-color: #2d1000;
 
             .cadre-img {
@@ -163,6 +165,7 @@ body {
             .datas-timbre {
               float: left;
               width: 518px;
+              padding-left: 4px;
             }
 
 
@@ -178,6 +181,38 @@ body {
             }
 
           }
+          // Section timbre
+          .eminence-timbre2 {
+            min-height: 110px;
+
+            .cadre-img {
+              width: 100px;
+              // height: 100px;
+              float: left;
+              border-radius: @border-radius; 
+              background-color: @background-light;
+            }
+
+            .datas-timbre {
+              float: left;
+              width: 518px;
+              padding-left: 4px;
+            }
+
+
+            .logo-penombre {
+              float: none;
+              width: 217px;
+              content: url("/systems/penombre/assets/ui/logo_penombre_sur_fond_sombre.png");
+            }
+            .frise-penombre {
+              float: left;
+              width: 400px;
+              content: url("/systems/penombre/assets/ui/frise_plus_grande_sur_fond_sombre.png");
+            }
+
+          }
+
         }
       }
     }
@@ -259,6 +294,7 @@ body {
       .eminence-harmoniques,
       .eminence-conscience,
       .eminence-timbre,
+      .eminence-timbre2,
       .eminence-pouvoirs,
       .eminence-atouts,
       .eminence-maitrises {
@@ -285,6 +321,10 @@ body {
           height: 152px;
           width: 150px;
           padding: 1px;
+
+          .logo-img {
+            border-radius: @border-radius;
+          }
         }
 
         .data {
