@background-dark CSS

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -9,6 +9,7 @@
 @color-secondary: #56605b; // Gris
 @color-accent: #917f35; // Doré
 @background-light: #faeed6; // Fond clair
+@background-dark: #2d1000; // fond frise sombre
 
 // Polices
 @font-cattedrale: "CattedraleDemo";
@@ -154,7 +155,7 @@ body {
           // Section timbre
           .eminence-timbre {
             min-height: 90px;
-            background-color: #2d1000;
+            background-color: @background-dark;
 
             .cadre-img {
               width: 100px;
